--- a/interface/web/src/app/components/pages/filter/filter.component.css
+++ b/interface/web/src/app/components/pages/filter/filter.component.css
@@ -8,3 +8,10 @@ input, textarea {
 table input, textarea {
     width: 100%
 }
+td.range-options{
+    width: 25%;
+    padding: 0;
+}
+td.range-options:hover {
+    background-color: rgba(255, 255, 255, 0.041)
+}
