--- a/interface/web/src/app/components/pages/filter/filter.component.html
+++ b/interface/web/src/app/components/pages/filter/filter.component.html
@@ -1,33 +1,34 @@
-<div class="container mt-4 mb-5 animated fadeIn fast">
+<div class="container mt-4 mb-5 pb-4 animated fadeIn fast">
 
-  <a [routerLink]="[ '/filters' ]" class="badge badge-primary"> <b></b> Atrás</a>
+  <a [routerLink]="[ '/filters' ]" class="badge badge-primary" (click)="saveAndExit()"> <b></b> Atrás</a>
 
   <div class="row">
     <div class="col">
-      <h1 class="mt-2"> {{filter.name}} </h1>
+      <h1 class="mt-2" >
+        <input type="text" class="table" [(ngModel)]="filter.name">
+      </h1>
+      <span>{{filter.id}}</span>
     </div>
     <div class="col align-middle">
-      <button class="btn btn-secondary float-right align-middle btn-md">save</button>
+      <button class="btn btn-secondary float-right align-middle btn-md" (click)="save()">save</button>
     </div>
   </div>
 
   <hr>
-  <div [hidden]="!filter.label" class="breadcrumb option animated fadeIn">
+  <div class="breadcrumb option animated fadeIn">
       <p class="m-0"> Etiqueta: <b>
-        <input type="text" class="table" [(value)]="filter.label">
+        <input type="text" class="table" [(ngModel)]="filter.label">
       </b></p>
   </div>
 
-  <div [hidden]="!filter.description" class="card option animated fadeIn" >
+  <div class="card option animated fadeIn fast" >
       <div class="card-body">
           <h3>Descripción</h3>
           <span >
-              <textarea type="text" class="text-secondary"> {{filter.description}} </textarea>
+              <textarea type="text" class="text-secondary" [(ngModel)]="filter.description">  </textarea>
           </span>
       </div>
   </div>
-
-  <div [hidden]="!(filter.default_params)">
 
     <h2 class="mt-4">Parámetros</h2>
     <hr class="m-0">
@@ -36,21 +37,41 @@
         <tr>
           <th scope="col">Llave</th>
           <th scope="col">Valor</th>
-          <th scope="col">Rango / Opciones</th>
+          <th scope="col">Rango / Opción</th>
           <th scope="col">Editable</th>
+          <th scope="col">-</th>
         </tr>
       </thead>
       <tbody>
         <tr 
-          *ngFor="let param of filter.default_params" 
+          *ngFor="let param of filter.default_params; let i=index" 
           class="option"
           >
-          <th scope="row"> <input type="text" class="table" [(value)]="param.key"> </th>
-          <td> <input type="text" class="table" [(value)]="param.value"> </td>
-          <td>{{param.key}}</td>
-          <td>@mdo</td>
+          <th scope="row"> <input type="text" class="table" [(ngModel)]="param.key"> </th>
+
+          <td> <input type="text" class="table" [(ngModel)]="param.value"> </td>
+
+          <td class="range-options">
+            <app-param-option [inputData]="param.definition" (dataChanged)="paramsDataChanged($event, i)"></app-param-option>
+          </td>
+
+          <td> <input type="checkbox" [(ngModel)]="param.editable"></td>
+
+          <td class="p-2">
+            <button class="btn btn-outline-danger btn-block btn-sm" (click)="delParam(i)">Delete</button>
+          </td>
+        </tr>
+        <tr class="option" (click)="addParam()">
+          <th scope="row" colspan="5">Añadir parámetro</th>
+          
         </tr>
       </tbody>
     </table>
-  </div>
+    <button class="btn btn-outline-danger col-3 float-right" (click)="delConfirm = true">Eliminar</button>
+    <button class="btn btn-danger col-3 float-right mr-2" (click)="delFilter()" (mouseover)="delSure()" [hidden]="!delConfirm"> {{delConfirmText}}</button>
+
+    <hr>
+
+    <h2>JSON</h2>
+    <pre> {{filter | json}} </pre>
 </div>
