--- a/interface/web/src/app/components/pages/filters/filters.component.html
+++ b/interface/web/src/app/components/pages/filters/filters.component.html
@@ -1,6 +1,13 @@
 <div class="container mt-5 mb-5">
 
-    <h1>Filtros</h1>
+    <div class="row">
+      <div class="col">
+        <h1>Filtros</h1>
+      </div>
+      <div class="col">
+        <button class="btn btn-success float-right" (click)="newFilter()">Nuevo</button>
+      </div>
+    </div>
     <hr>
     <div>
         
