Optimización en página de filtros
He creado un nuevo servicio para todo lo relacionado con los filtros, así mismo optimizado y limpiado el código de las páginas de menú de filtros y edición de filtros

--- a/interface/web/src/app/components/pages/filter/filter.component.html
+++ b/interface/web/src/app/components/pages/filter/filter.component.html
@@ -9,7 +9,7 @@
       </h1>
       <span>{{filter.id}}</span>
     </div>
-    <div class="col align-middle">
+    <div class="col align-middle" *ngIf="saveButton">
       <button class="btn btn-secondary float-right align-middle btn-md" (click)="save()">save</button>
     </div>
   </div>
