--- a/interface/web/src/app/components/pages/filters/filters.component.html
+++ b/interface/web/src/app/components/pages/filters/filters.component.html
@@ -12,7 +12,7 @@
     <div>
         
         <div 
-        *ngFor="let filter of filters"
+        *ngFor="let filter of filters | async"
         class="card animated fadeIn fast mb-2 option" 
         (click)="gotoFilter(filter)">
             <div class="card-header">
