--- a/interface/web/src/app/components/shared/navbar/navbar.component.html
+++ b/interface/web/src/app/components/shared/navbar/navbar.component.html
@@ -17,6 +17,9 @@
           <a class="nav-link" [routerLink]="['filters']">Filtros</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['filterChainsManager']">Cadenas de filtros</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['videos']">Videos</a>
           </li>
         
