Me la estoy mamando ayuda
No sé cómo pero funcionó alch kpd. Vale, ya está en proceso la construcción de la página de edición de cadenas de filtros. Falta que se guarden los datos en firestore y se deshabiliten los rangos de entrada para los parametros de filtros que no se pueden editar

--- a/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
+++ b/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
@@ -1,9 +1,29 @@
 <div class="m-5 animated fadeIn fast">
-    <div class="jumbotron">
-        <h1>{{chain.name}}</h1>
+    <div class="jumbotron p-5">
+        <h1> <input type="text" [(ngModel)]="chain.name"> </h1>
+        <p> {{chain.id}} </p>
+
+        <textarea [(ngModel)]="chain.description"></textarea>
+
+        <div class="categories">
+            <span
+                *ngFor="let category of chain.categories"
+                class="badge badge-primary p-1 mr-2"> {{category}}</span>
+        </div>
+
     </div>
 
+    <h1>Filtros:</h1>
+    <hr>
+    <div class="container">
+        
+        <app-chain-filter
+            *ngFor="let filter of chain.filters"
+            [filterParams]="filter"
+        ></app-chain-filter>
 
+        
+    </div>
 
     <hr>
     <app-json-preview [data]="chain"></app-json-preview>
