--- a/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
+++ b/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
@@ -18,9 +18,13 @@
     <div class="container">
         
         <app-chain-filter
-            *ngFor="let filter of chain.filters"
+            *ngFor="let filter of chain.filters; let i=index"
             [filterParams]="filter"
+            (filterParamsChange)="filterChanged(filter, i)"
         ></app-chain-filter>
+        <button 
+            class="btn btn-outline-warning btn-block mt-1"
+            (click)="newFIlter()">Add</button>
 
         
     </div>
