--- a/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.css
+++ b/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.css
@@ -3,12 +3,24 @@
     overflow: auto;
 }
 
-.audioVisualizer{
-    background-color: rgb(0,0,0,0.1);
+.timelineContainer{
+  display: flex;
 }
 .outerContainer{
     height: 10rem;
-    overflow: overlay;
+    overflow-x: overlay;
+    overflow-y: hidden;
+    background-color: rgb(0,0,0,0.1);
+}
+
+input.ZoomRangeY{
+  -webkit-appearance: slider-vertical;
+  appearance: slider-vertical;
+  height: 10rem;
+  width: 5px;
+  background: rgb(0,0,0,0.3);
+  outline: none;
+  
 }
 
 .audioVisualizer img,.innerContainer{
@@ -43,8 +55,8 @@ input.timelineBar{
 .timelineBar.shape::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
-  width: 10px; /* Set a specific slider handle width */
-  height: 10px; /* Slider handle height */
+  width: 3px; /* Set a specific slider handle width */
+  height: 3px; /* Slider handle height */
   background: var(--white); /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
@@ -62,7 +74,7 @@ input.timelineBar{
 .timelineBar.line::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
-  width: 5px; /* Set a specific slider handle width */
+  width: 3px; /* Set a specific slider handle width */
   height: 10rem; /* Slider handle height */
   background: rgb(0,0,0,0.2); /* Green background */
   cursor: pointer; /* Cursor on hover */
